[B]0.7.0[/B]
- [NEW] Hide watched flag in video section (side menu toggle)
- [NEW] Global search (split across video and music)
- [NEW] Favourites browser
- [MODIFIED] Home screen layout tweaked
- [FIXED] Incorrect letter cases 'musicViewType' amongst a couple of others (thanks Wishie)
- [FIXED] Footer information sometimes being shown incorrectly (myVideoNav, myMusicNav) Thanks Wishie.
- [MODIFIED] Item information in music section now handles albums and artists more appropriately.
- [MODIFIED] Global background systems reworked and simplified. Skin now defaults to hard coded background. User can override this with a static image, or use a fanart slideshow (assuming fanart paths are set).
- [REMOVED] Animated fanart slides, except in video / music info screens. 
- Various skinwide nips, tucks and tweaks.


[B]0.6.0[/B]
- 5 day weather screen added (press down on homescreen). Layout not finalised.
- New skin option: Set and use a custom global background
- Various skin-wide tweaks and fixes
- Music addons and file lists reworked. Should now work properly!
- Dialog 'DialogPVRTimerSettings.xml' added.
- Dialog 'DialogPVRChannelManager.xml' added.
- PVR Timer view implemented (first pass - not fully tested)
- Music player pause issue fixed (thanks lonjemoco!)

[B]0.5.0[/B]
- Photo library: basic / limited functionality implemented. Accessed from homescreen.
- Improvements to file browser and select dialogs (particularly for artwork selection and download)
- Bug fix: Music addons. Some problems with activating music addons from shortcuts persist.
- Various skin-wide tweaks and fixes

[B]0.1.4[/B]
- Dialog added: DialogNetworkSetup.xml
- Reworked: Music Now playing (musicvisualisation.xml) 
- UI Controls: Visual modification to spin controls and radio buttons for better visibility
- Misc animation adjustments
- Addition of indicator on homescreen for access to system info screen
- Some file browsing dialogs converted to multicolumn panels 