@@ -1,84 +1,5 @@
 <window id="2008">
-	<defaultcontrol always="true">450</defaultcontrol>
-	<allowoverlay>yes</allowoverlay>
-
 	<controls>
-
-		<include>modalDialog</include>
-
-		<control type="group">
-			<posx>510</posx>
-			<posy>210</posy>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>960</width>
-				<height>744</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<include>DialogID</include>
-				<label>DialogFileStacking.xml</label>
-			</control>
-
-			<control type="label">
-				<posx>15</posx>
-				<posy>38</posy>
-				<width>873</width>
-				<align>center</align>
-				<font>regular</font>
-				<info>ListItem.Label</info>
-			</control>
-
-			<control type="list" id="450">
-				<posx>15</posx>
-				<posy>117</posy>
-				<width>870</width>
-				<height>552</height>
-				<onleft>450</onleft>
-				<onright>450</onright>
-				<onup>450</onup>
-				<ondown>450</ondown>
-				<itemlayout height="69">
-
-					<control type="image">
-						<width>870</width>
-						<height>66</height>
-						<texture border="2">colors/black.png</texture>
-					</control>
-
-					<control type="label">
-						<posx>30</posx>
-						<width>810</width>
-						<info>ListItem.Label</info>
-					</control>
-
-				</itemlayout>
-
-				<focusedlayout height="69">
-
-					<control type="image">
-						<width>870</width>
-						<height>66</height>
-						<texture border="5">colors/selected.png</texture>
-					</control>
-
-					<control type="label">
-						<posx>30</posx>
-						<width>810</width>
-						<info>ListItem.Label</info>
-					</control>
-
-				</focusedlayout>
-
-			</control>
-
-		</control>
-
-		<include>Debug_Grid</include>
-
+		<!--removed: Not used-->
 	</controls>
-
 </window>
