@@ -1,48 +1,5 @@
 <window type="dialog" id="143">
-
 	<controls>
-
-		<include>GlobalOverlay</include>
-
-		<control type="group">
-			<posx>150</posx>
-			<posy>0</posy>
-
-			<control type="label">
-				<posx>30</posx>
-				<posy>120</posy>
-				<include>DialogID</include>
-				<label>DialogKaraokeSongSelector.xml</label>
-			</control>
-
-			<control type="image">
-				<posx>-30</posx>
-				<posy>-45</posy>
-				<width>600</width>
-				<height>156</height>
-				<texture border="22">other_textures/ContentPanel.png</texture>
-			</control>
-
-			<control type="label" id="401">
-				<description>Song Number Label</description>
-				<posy>3</posy>
-				<width>510</width>
-				<height>38</height>
-			</control>
-
-			<control type="label" id="402">
-				<description>Song Name Label</description>
-				<posy>52</posy>
-				<width>510</width>
-				<height>30</height>
-				<font>Medium</font>
-				<textcolor>blue</textcolor>
-			</control>
-
-		</control>
-
-		<include>Debug_Grid</include>
-
+		<!--removed: not used-->
 	</controls>
-
 </window>
