@@ -1,61 +1,5 @@
 <window type="dialog" id="144">
-
-	<controls>
-
-		<include>GlobalOverlay</include>
-
-		<control type="group">
-			<posx>623</posx>
-			<posy>338</posy>
-
-			<control type="image">
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>675</width>
-				<height>225</height>
-				<texture border="22">other_textures/ContentPanel.png</texture>
-			</control>
-
-			<control type="label">
-				<posx>15</posx>
-				<posy>-45</posy>
-				<include>DialogID</include>
-				<label>DialogKaraokeSongSelectorLarge.xml</label>
-			</control>
-
-			<control type="label" id="1">
-				<description>header label</description>
-				<posx>30</posx>
-				<posy>15</posy>
-				<width>615</width>
-				<font>Medium</font>
-				<label>31031</label>
-				<align>center</align>
-			</control>
-
-			<control type="label" id="401">
-				<description>Song Number Label</description>
-				<posx>30</posx>
-				<posy>68</posy>
-				<width>615</width>
-				<align>center</align>
-			</control>
-
-			<control type="label" id="402">
-				<description>Song Name Label</description>
-				<posx>30</posx>
-				<posy>128</posy>
-				<width>615</width>
-				<font>Medium</font>
-				<align>center</align>
-				<textcolor>blue</textcolor>
-				<scroll>true</scroll>
-			</control>
-
-		</control>
-
-		<include>Debug_Grid</include>
-
+	<controls>		
+		<!--removed: not used-->
 	</controls>
-
 </window>
