@@ -3,30 +3,85 @@
 	<allowoverlay>yes</allowoverlay>
 
 	<controls>
+
+		<control type="group">
+													
+			<posx>col-19-begin</posx>
+			<posy>83</posy>
+			
+			<!--animations-->
+			<animation type="Windowclose">
+				<effect type="fade" start="100" end="0" time="400" tween="sine" />
+			</animation>
+			
+			<control type="image">
+				<posx>0</posx>
+				<posy>-12</posy>
+				<width>8-col</width>
+				<height>102</height>
+				<texture>colors/selected.png</texture>
+				<colordiffuse>eeFFFFFF</colordiffuse>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="slide" start="1000,0" end="0,0" time="400" tween="sine" />
+				</animation>
+			</control>
+
+			<control type="label">
+				<description>heading</description>
+				<posx>24</posx>
+				<posy>-12</posy>
+				<font>smallStrong</font>
+				<width>4-col</width>
+				<height>1-row</height>
+				<label>772</label>
+				<scroll>true</scroll>
+				<textcolor>black</textcolor>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="400" time="400" tween="sine" />
+				</animation>
+			</control>
+
+			<control type="label">
+				<posx>24</posx>
+				<posy>30</posy>
+				<width>1-col</width>
+				<font>symbolLarge</font>
+				<textcolor>black</textcolor>
+				<label></label>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="600" time="400" tween="sine" />
+				</animation>
+			</control>
+			
+			<control type="label">
+				<posx>72</posx>
+				<posy>34</posy>
+				<width>4-col</width>
+				<font>pageTitle</font>
+				<textcolor>black</textcolor>
+				<label>30225</label>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="600" time="400" tween="sine" />
+				</animation>
+			</control>
+						
+		</control>
 		
+		<!--debugging-->
+		<include>Debug_Grid</include>
 		<control type="label">
 			<posx>0</posx>
 			<posy>0</posy>
 			<include>DialogID</include>
 			<label>DialogMuteBug.xml</label>
 		</control>
-
-		<control type="group">
-			<posx>col-1-begin</posx>
-			<posy>row-17-begin</posy>
-			
-			<control type="label">
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>1-col</width>
-				<font>symbolLarge</font>
-				<textcolor>selected</textcolor>
-				<label></label>
-			</control>
-
-		</control>
-
-		<include>Debug_Grid</include>
 
 	</controls>
 
