@@ -3,55 +3,95 @@
 	<allowoverlay>yes</allowoverlay>
 
 	<controls>
-
+		
 		<control type="group">
-			<posx>638</posx>
-			<posy>0</posy>
-
+													
+			<posx>col-19-begin</posx>
+			<posy>83</posy>
+			
+			<!--animations-->
+			<animation type="Windowclose">
+				<effect type="fade" start="100" end="0" time="400" tween="sine" />
+			</animation>
+			
 			<control type="image">
-				<posx>-30</posx>
-				<posy>-30</posy>
-				<width>690</width>
-				<height>162</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<posy>130</posy>
-				<include>DialogID</include>
-				<label>DialogSlider.xml</label>
+				<posx>0</posx>
+				<posy>-12</posy>
+				<width>8-col</width>
+				<height>102</height>
+				<texture>colors/selected.png</texture>
+				<colordiffuse>eeFFFFFF</colordiffuse>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="slide" start="1000,0" end="0,0" time="400" tween="sine" />
+				</animation>
 			</control>
 
 			<control type="label" id="10">
-				<description>Heading</description>
-				<posx>15</posx>
-				<width>375</width>
+				<description>heading</description>
+				<posx>24</posx>
+				<posy>-12</posy>
+				<font>smallStrong</font>
+				<width>468</width>
+				<height>1-row</height>
 				<label>-</label>
-				<textcolor>90</textcolor>
+				<scroll>true</scroll>
+				<textcolor>black</textcolor>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="400" time="400" tween="sine" />
+				</animation>
 			</control>
 
+			<control type="label">
+				<description>Control indicator</description>
+				<posx>24</posx>
+				<posy>30</posy>
+				<font>pageTitle</font>
+				<textcolor>black</textcolor>
+				<width>468</width>
+				<height>1-row</height>
+				<label>◀ ▶</label>
+				<scroll>true</scroll>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="600" time="400" tween="sine" />
+				</animation>
+			</control>
+			
 			<control type="label" id="12">
-				<description>Label</description>
-				<posx>615</posx>
-				<width>375</width>
+				<description>message</description>
+				<posx>96</posx>
+				<posy>30</posy>
+				<font>pageTitle</font>
+				<textcolor>black</textcolor>
+				<width>468</width>
+				<height>1-row</height>
 				<label>-</label>
-				<align>right</align>
+				<scroll>true</scroll>
+				<shadowcolor>-</shadowcolor>
+				<!--animations-->
+				<animation type="Windowopen">
+					<effect type="fade" start="0" end="100" delay="600" time="400" tween="sine" />
+				</animation>
 			</control>
-
+			
 			<control type="slider" id="11">
+				<visible>true</visible>
 				<description>Slider</description>
-				<posx>15</posx>
-				<posy>66</posy>
-				<width>600</width>
-				<onup>-</onup>
-				<ondown>-</ondown>
-				<onleft>11</onleft>
-				<onright>11</onright>
 			</control>
-
+						
 		</control>
-
+		
+		<!--debugging-->
 		<include>Debug_Grid</include>
+		<control type="label">
+			<posy>130</posy>
+			<include>DialogID</include>
+			<label>DialogSlider.xml</label>
+		</control>
 
 	</controls>
 
