@@ -255,26 +255,37 @@
 				<posx>col-7-begin</posx>
 				<posy>row-11-begin</posy>
 			
-				<!--title-->
+				<!--titles-->
 				<control type="label">
 					<posx>0</posx>
 					<posy>0</posy>
 					<width>12-col</width>
 					<align>left</align>
-					<font>regularStrong</font>
+					<font>itemTitleSmall</font>
 					<textcolor>selected</textcolor>
-					<label>$INFO[listitem.tvshowtitle,, • ]$INFO[listitem.season,Season , • ]$INFO[ListItem.label]</label>
+					<label fallback="Synopsis">$INFO[listitem.tvshowtitle,, • ]$INFO[listitem.season,Season]$INFO[listitem.duration, • , mins]</label>
+				</control>
+				
+				<control type="label">
+					<description>Episode title</description>
+					<posx>0</posx>
+					<posy>1-row</posy>
+					<width>12-col</width>
+					<align>left</align>
+					<font>medium</font>
+					<textcolor>selected</textcolor>
+					<label>$INFO[ListItem.Label]</label>
 				</control>
 								
 				<!--synopsis-->			
 				<control type="textbox">
 					<posx>0</posx>
-					<posy>68</posy>
+					<posy>120</posy>
 					<font>small</font>
 					<width>12-col</width>
 					<align>left</align>
 					<textcolor>selected</textcolor>
-					<height>206</height>
+					<height>174</height>
 					<label>[B]$INFO[ListItem.plot][/B]</label>
 					<autoscroll delay="10000" time="1000" repeat="10000"></autoscroll>
 				</control>
