@@ -1,56 +1,5 @@
 <window id="2009">
-
 	<controls>
-
-		<control type="karvisualisation" id="1">
-			<description>visualisation</description>
-			<posx>0</posx>
-			<posy>0</posy>
-			<width>1920</width>
-			<height>1080</height>
-			<visibility>false</visibility>
-		</control>
-
-		<control type="image" id="2">
-			<description>fullscreen image</description>
-			<posx>0</posx>
-			<posy>0</posy>
-			<width>1920</width>
-			<height>1080</height>
-			<visibility>false</visibility>
-		</control>
-
-		<control type="group">
-			<posx>600</posx>
-			<posy>0</posy>
-			<visible>MusicPlayer.Offset(number).Exists + !IntegerGreaterThan(Player.TimeRemaining,20)</visible>
-
-			<control type="label">
-				<posx>30</posx>
-				<posy>78</posy>
-				<include>DialogID</include>
-				<label>MusicKaraokeLyrics.xml</label>
-			</control>
-
-			<control type="image">
-				<posx>0</posx>
-				<posy>-30</posy>
-				<width>720</width>
-				<height>117</height>
-				<texture border="22">other_textures/ContentPanel.png</texture>
-			</control>
-
-			<control type="label" id="402">
-				<description>Next Song Name</description>
-				<posx>30</posx>
-				<width>630</width>
-				<label>[COLOR=blue]$LOCALIZE[209] :[/COLOR] $INFO[MusicPlayer.offset(1).Title]</label>
-			</control>
-
-		</control>
-
-		<include>Debug_Grid</include>
-
+		<!--removed: not used-->
 	</controls>
-
 </window>
