@@ -5,9 +5,11 @@
 - [MODIFIED] Home screen layout tweaked
 - [FIXED] Incorrect letter cases 'musicViewType' amongst a couple of others (thanks Wishie)
 - [FIXED] Footer information sometimes being shown incorrectly (myVideoNav, myMusicNav) Thanks Wishie.
+- [FIXED] Global background not working in music file lists
 - [MODIFIED] Item information in music section now handles albums and artists more appropriately.
 - [MODIFIED] Global background systems reworked and simplified. Skin now defaults to hard coded background. User can override this with a static image, or use a fanart slideshow (assuming fanart paths are set).
 - [REMOVED] Animated fanart slides, except in video / music info screens. 
+- [NEW] DialogSlider.xml (supports zoom setting in video settings)
 - Various skinwide nips, tucks and tweaks.
 
 
